2020-05-09  Mark Wielaard  <mark@klomp.org>

	* elflint.c (process_elf_file): Error out if ebl_openbackend fails.
	* objdump.c (handle_elf): Likewise.
	* nm.c (handle_elf): Likewise. Move full name string construction
	forward, so it can be used in the error message.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug): Check .gnu.debuglto_ prefix.

2020-04-16  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_sections): Mask out SHF_EXCLUDE from processor
	specific section flags when --gnu is given.

2020-02-08  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_program_header): Handle PT_GNU_PROPERTY.

2020-02-07  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_symtab): Check st_info isn't too big.

2020-01-16  Mark Wielaard  <mark@klomp.org>

	* nm.c (show_symbols_sysv): Iterate over all symbols starting
	at index zero.

2019-11-26  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (BUILD_STATIC): Add libraries needed for libdw.

2019-10-26  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (collect_symbols): Check symbol strings are
	terminated.

2019-10-18  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (adjust_relocs): Set versym data d_size to the actual
	size allocated.

2019-10-20  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (copy_elided_sections): Set and check max_off.

2019-10-21  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (adjust_relocs): Add map_size argument and check ndx
	against it.
	(adjust_all_relocs): Add map_size argument and pass it to
	adjust_relocs.
	(add_new_section_symbols): Call adjust_all_relocs with symndx_map
	size.
	(collect)symbols): Check sym and string data can be found.
	(compare_symbols_output): Call error when (different) symbols are
	equal.
	(new_shstrtab): Make unstripped_strent array one larger. Check
	stripped_shnum isn't zero.
	(copy_elided_sections): Add ndx_sec_num as size of ndx_section
	array. Check sh_link and sh_info are not larger than ndx_sec_num.