@@ -1,3 +1,7 @@
+2020-05-14  Mark Wielaard  <mark@klomp.org>
+
+	* size.c (show_bsd): Set printf format based on radix.
+
 2020-05-09  Mark Wielaard  <mark@klomp.org>
 
 	* elflint.c (process_elf_file): Error out if ebl_openbackend fails.
